force-app/main/default/objects/numm__Role_du_schema__c/numm__Role_du_schema__c.object-meta.xml
<CustomObject>
    <label>Role du schéma d&#39;écriture</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Role du schéma d&#39;écriture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles du schéma d&#39;écriture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>