force-app/main/default/objects/numm__Role_du_schema__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Schémas d&#39;écriture</relationshipLabel>
    <relationshipName>Roles_du_schema</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>