force-app/main/default/objects/numm__Role_du_schema__c/fields/numm__Role_du_Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Role_du_Tiers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Si vous souhaitez restreindre l&#39;utilisation du schéma à un seul tiers.</inlineHelpText>
    <label>Role du Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>numm__ThirdPartyRule__c.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Roles du schéma</relationshipLabel>
    <relationshipName>Roles_du_schema</relationshipName>
    <type>Lookup</type>
</CustomField>