force-app/main/default/objects/numm__Role_du_schema__c/fields/numm__Schema_ecriture__c.field-meta.xml
<CustomField>
    <fullName>numm__Schema_ecriture__c</fullName>
    <label>Schéma d&#39;écriture</label>
    <referenceTo>numm__Schema_Ecriture__c</referenceTo>
    <relationshipLabel>Roles du schéma</relationshipLabel>
    <relationshipName>Roles_du_schema</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>